--- a/index.html
+++ b/index.html
@@ -1,11 +1,52 @@
-Site under maintenance.
+<!DOCTYPE html>
+<html lang="en">
 
-<br> <br>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Homepage of Tapomoy Adhikari</title>
+</head>
 
-For queries, please write to communications*tapomoy.co.in
+<body>
+    <h2>Homepage of Tapomoy Adhikari</h2>
 
-<br>
-Replace * with @
+    <p><strong>Present Affiliation(s):</strong></p>
+    <ul>
+        <li>Corgnit Research Lab, Bangalore, India</li>
+        <li><a href="http://finessefleet.com">Finessefleet Foundation</a>, Bangalore, India</li>
+    </ul>
 
-<br><br>
-Last updated: Tue 8 Jul, 2025
+    <p>
+        The best way to reach me is by email (<a
+            href="mailto:communications@tapomoy.co.in">communications@tapomoy.co.in</a>).
+        Responses may take some time. I primarily use <code>*@tapomoy.co.in</code>. I also use
+        <code>tapomoy@corgnit.com</code> for correspondence related to Corgnit Research. Any communication from other
+        domains should be treated with caution and verified..
+    </p>
+
+    <p>
+        If you would like to have a discussion or meeting, please email me first. For verbal discussions, you can check
+        my <a href="calendar.html">calendar</a> for available slots and propose a meeting at your convenience.
+    </p>
+
+    <p><strong>Since 2024,</strong> I focus on AI that thinks, collaborates, and reasons, along with other
+        interdisciplinary areas.</p>
+
+    <p>
+        Phone: +91-80- (O), +91-80- (R)<br>
+        Fax: +91-80- <br>
+        email: <a href="mailto:communications@tapomoy.co.in">communications@tapomoy.co.in</a> (preferred), <a
+            href="mailto:tapomoy@corgnit.com">tapomoy@corgnit.com</a> (work)<br>
+    </p>
+
+<p>
+        I use social media only on <a href="https://in.linkedin.com/in/tapomoyadhikari">LinkedIn</a> and <a
+        href="https://x.com/tapomoyadhikari">Twitter</a>. Email is the best way to reach me. 
+</p>
+
+        <br>
+
+    Last updated: Wed 15 Oct, 2025
+</body>
+
+</html>
